--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/cilantro-pasta.html">Cilantro Pasta</a>
+    <ul>
+        <li><a href="./recipes/cilantro-pasta.html">Cilantro Pasta</a></li>
+        <li><a href= ./recipes/onigiri.html>Tuna Onigiri</a></li>
+    </ul>
+    
 </body>
 </html>
