Add link to okonomikitchen.com

--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -30,5 +30,6 @@
         <li>If shaping the onigiri with a mold, soak the mold in water, drain, and sprinkle salt in. If shaping the onigiri with your hands, let the rice cool slightly, and prep a bowl of water for your hands.</li>
         <li>Make the onigiri (yay!)</li>
     </ol>
+    <b>More variations can be found at <a href="https://www.okonomikitchen.com/vegan-onigiri-japanese-rice-ball-recipe/">okonomikitchen.com!</a></b>
 </body>
 </html>
