Add sinigang-salmon.html and update list of recipes on index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/cilantro-pasta.html">Cilantro Pasta</a></li>
         <li><a href= ./recipes/onigiri.html>Tuna Onigiri</a></li>
+        <li><a href="./recipes/sinigang-salmon.html">Sinigang Salmon</a></li>
     </ul>
     
 </body>
