--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Alyssa's Favorite Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Alyssa's Favorite Recipes</h1>
     <ul>
         <li><a href="./recipes/cilantro-pasta.html">Cilantro Pasta</a></li>
         <li><a href= ./recipes/onigiri.html>Tuna Onigiri</a></li>
