--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuna Onigiri</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Tuna Onigiri</h1>
