--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alyssa's Favorite Recipes</title>
+    <title>Alyssa's Cookbook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Alyssa's Favorite Recipes</h1>
-    <ul>
-        <li><a href="./recipes/cilantro-pasta.html">Cilantro Pasta</a></li>
-        <li><a href= ./recipes/onigiri.html>Tuna Onigiri</a></li>
-        <li><a href="./recipes/sinigang-salmon.html">Sinigang Salmon</a></li>
-    </ul>
-    
+    <div class="header">
+        <h1>Alyssa's Cookbook</h1>
+    </div>
+    <div class="menu-container">
+        <a class="recipe-button" href="./recipes/cilantro-pasta.html">Cilantro Pasta</a>
+        <a class="recipe-button" href= ./recipes/onigiri.html>Tuna Onigiri</a>
+        <a class="recipe-button" href="./recipes/sinigang-salmon.html">Sinigang Salmon</a>
+    </div>
 </body>
 </html>
