--- a/recipes/cilantro-pasta.html
+++ b/recipes/cilantro-pasta.html
@@ -7,30 +7,33 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Cilantro Pasta</h1>
-    <img src="https://cdn7.kiwilimon.com/recetaimagen/34179/39798.jpg" alt="A small white bowl of penne pasta covered in a creamy green sauce, shredded white cheese, and cilantro">
-    <h4>Description</h4>
-    <p>This dish features a creamy sauce prepared with cilantro, cream cheese, goat cheese, and evaporated milk.</p>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>2 cups short pasta, penne pasta, or fusili pasta</li>
-        <li>1/4 onions</li>
-        <li>1 clove garlic</li>
-        <li>1/3 cup cream cheese</li>
-        <li>1/2 cup goat cheese</li>
-        <li>1 cup evaporated milk</li>
-        <li>1 cup chicken broth</li>
-        <li>1 cup fresh cilantro</li>
-        <li>1 tbsp butter</li>
-        <li>fresh cilantro for garnish</li>
-        <li>Parmesan cheese, shredded, for garnish</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>In a pot, bring to a boil. Add salt and wait until the water comes to a boil again. Add pasta and prepare it following the instructions on the package. Drain and set aside.</li>
-        <li>For the cilantro sauce: In a blender, combine onion, garlic, cream cheese, goat cheese, evaporated milk, chicken broth, and cilantro and blend until smooth.</li>
-        <li>In a pot, heat butter and pour in cilantro sauce. Cook for 10 minutes once it comes to a boil. Season cilantro sauce with salt and pepper. Add pasta and mix thoroughly.</li>
-        <li>Serve creamy cilantro pasta garnished with Parmesan cheese.</li>
-    </ol>
+    <div class="recipe-container">
+        <h1>Cilantro Pasta</h1>
+        <img src="https://cdn7.kiwilimon.com/recetaimagen/34179/39798.jpg" alt="A small white bowl of penne pasta covered in a creamy green sauce, shredded white cheese, and cilantro">
+        <h4>Description</h4>
+        <p>This dish features a creamy sauce prepared with cilantro, cream cheese, goat cheese, and evaporated milk.</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>2 cups short pasta, penne pasta, or fusili pasta</li>
+            <li>1/4 onions</li>
+            <li>1 clove garlic</li>
+            <li>1/3 cup cream cheese</li>
+            <li>1/2 cup goat cheese</li>
+            <li>1 cup evaporated milk</li>
+            <li>1 cup chicken broth</li>
+            <li>1 cup fresh cilantro</li>
+            <li>1 tbsp butter</li>
+            <li>fresh cilantro for garnish</li>
+            <li>Parmesan cheese, shredded, for garnish</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>In a pot, bring to a boil. Add salt and wait until the water comes to a boil again. Add pasta and prepare it following the instructions on the package. Drain and set aside.</li>
+            <li>For the cilantro sauce: In a blender, combine onion, garlic, cream cheese, goat cheese, evaporated milk, chicken broth, and cilantro and blend until smooth.</li>
+            <li>In a pot, heat butter and pour in cilantro sauce. Cook for 10 minutes once it comes to a boil. Season cilantro sauce with salt and pepper. Add pasta and mix thoroughly.</li>
+            <li>Serve creamy cilantro pasta garnished with Parmesan cheese.</li>
+        </ol>
+    </div>
+
 </body>
 </html>
